# mfc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
mfc/: CMakeLists.txt  ctmbench.cpp  mfc.cpp
mfc/controllers/: MeshController.cpp  MeshController.h
mfc/lib/: openctm-msvc.def
mfc/mesh/: MeshConverter.cpp  MeshConverter.h  MeshProcessor.cpp  MeshProcessor.h  OptionParser.cpp  OptionParser.h  OptionsProcessor.cpp  OptionsProcessor.h  bin2c.cpp  common.cpp  common.h  d  mesh.cpp  mesh.h  meshio.cpp  meshio.h  options.cpp  options.h  systimer.cpp  systimer.h
mfc/mesh/format/: 3ds.cpp  3ds.h  Format.cpp  Format.h  ctm.cpp  ctm.h  dae.cpp  dae.h  image.cpp  image.h  lwo.cpp  lwo.h  obj.cpp  obj.h  off.cpp  off.h  ply.cpp  ply.h  stl.cpp  stl.h  vtk.h  wrl.cpp  wrl.h
mfc/mesh/jpeg/: jcapimin.c  jdapimin.c
mfc/mesh/zlib/: README
mfc/network/: HttpServer.cpp  HttpServer.h  NetworkProvider.cpp  NetworkProvider.h
mfc/nlohmann/: json.hpp
mfc/time/: Timer.cpp  Timer.h
